# bot_insta

./: .env example  .gitignore  .tool-versions  LICENSE  README.md  bot.py  botgram.ipynb  insta.ipynb  main.py  pyproject.toml
