[tool.poetry]
name = "bot-insta"
version = "0.1.0"
description = ""
authors = ["Dsmariano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
selenium = "4.10.0"
webdriver-manager = "^4.0.1"
undetected-chromedriver = "^3.5.3"
customtkinter = "^5.2.0"
ipykernel = "^6.25.2"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
